test: 测试一下 git 部署是否立刻生效（注意浏览器可能存在缓存）

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
   <meta name="description" content="饥荒联机版《更多物品》官方介绍页，最新最全的内容都在这里~" />
   <meta name="keywords" content="更多物品,更多物品介绍页,饥荒联机版更多物品" />
-  <title>更多物品介绍页</title>
+  <title>更多物品介绍页 test</title>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     :root {
